--- a/index.html
+++ b/index.html
@@ -1359,7 +1359,7 @@ wordpress_test_cookie	"WP Cookie check"
                 Die primäre Empfehlung bleibt, das verwundbare Plugin `easy-cookies-policy` umgehend zu aktualisieren, zu ersetzen oder zu entfernen. Die hier gezeigten Cookies sind Symptome der Plugin-Aktivität, nicht die Ursache der Schwachstelle.
             </p>
 
-            <img src="login_blesed.jpg" alt="Login-Versuch mit Benutzer blessed" />
+            <img src="login13.jpg" alt="Login-Versuch mit Benutzer blessed" />
             <p class="comment">
                 Das Bild `login_blesed.jpg` dokumentiert den erfolgreichen Login-Vorgang in das WordPress-Backend unter `http://shemhamphorash.local/sitecore/wp-login.php` mit den zuvor durch `wpscan` aufgedeckten Anmeldeinformationen: Benutzer `blessed` und Passwort `yourmom`. Dies gewährt uns nun authentifizierten Zugriff auf die WordPress-Instanz.
             </p>
@@ -2901,7 +2901,7 @@ MariaDB [wordpress_db]> <span class="command">INSERT INTO wp_users (user_login, 
                     </pre>
                 </div>
             </div>
-            <img src="wp_admin_acc_erfolgreich_erstellt_und_eingeloggt.jpg" alt="Erfolgreicher Login mit dem neu erstellten WordPress Admin-Account 'dbmaster'" />
+            <img src="wp_admin_12.jpg" alt="Erfolgreicher Login mit dem neu erstellten WordPress Admin-Account 'dbmaster'" />
             <p class="analysis">
                 **Analyse:**
                 Ich verbinde mich erfolgreich mit der MariaDB-Datenbank als Benutzer `enochian` mit dem Passwort `f4OqtZb7`.
